--- a/scss/style.css
+++ b/scss/style.css
@@ -121,7 +121,6 @@ img {
 
 a {
   text-decoration: none;
-  color: #fff;
 }
 a:hover {
   text-decoration: none;
@@ -699,6 +698,29 @@ body {
 
 .footer {
   padding-top: 96px;
+}
+.footer-navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.footer-navbar__1 {
+  padding-right: 136px;
+}
+.footer-navbar__1 a {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: var(--font-family);
+  font-size: 16rem;
+  font-weight: 400;
+}
+.footer-navbar__1 a .logo {
+  font-size: 24rem;
+  font-weight: 500;
+  color: var(--c-text-white);
+  font-family: var(--second-family);
 }
 .footer-policy {
   padding-top: 36rem;
