--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,5 +14,7 @@
 // components
 @import 'components/header';
 @import 'components/welcome';
+@import 'components/service';
 @import 'components/project';
+@import 'components/team';
 @import 'components/footer';
