--- a/style.css
+++ b/style.css
@@ -590,6 +590,12 @@ body {
   .welcome__title {
     font-size: 32rem;
     margin-bottom: 15rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .welcome__desc {
@@ -600,6 +606,16 @@ body {
   text-shadow: 0 4rem 4rem rgba(0, 0, 0, 0.07);
   opacity: 0.8;
   margin-bottom: 21rem;
+}
+@media (max-width: 992px) {
+  .welcome__desc {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .welcome__nav {
   display: -webkit-box;
@@ -612,9 +628,9 @@ body {
 }
 @media (max-width: 992px) {
   .welcome__nav {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
@@ -774,6 +790,9 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .project-item:nth-child(even) .project-item__img {
