--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -18,7 +18,7 @@
 			flex-direction: column;
 			left: 0;
 			top: 0;
-			background: var(--c-primary);
+			background: linear-gradient(91deg, #2563eb 0%, #d946ef 100%);;
 			align-items: center;
 			justify-content: center;
 			transform: translateX(-120%);
