--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ body {
             flex-direction: column;
     left: 0;
     top: 0;
-    background: var(--c-primary);
+    background: linear-gradient(91deg, #2563eb 0%, #d946ef 100%);
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
